<resources>
    <!-- GENERAL -->
    <string name="app_name">WellNest</string>
    <string name="main_button">WellNest Click</string>
    <string name="delete">Delete</string>

    <!-- -->
    <string name="image">Image</string>
    <string name="content_description">Content Description</string>
    <string name="plus">+</string>
    <string name="search">Search</string>


    <!-- Bottom Navigation Menu -->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_pomodoro">Pomodoro</string>
    <string name="bottom_navigation_menu_profile">Profile</string>
    <string name="bottom_navigation_menu_activity">Activity</string>
    <string name="bottom_navigation_menu_calories_counter">Calories Counter</string>"

    <!-- AUTHENTICATION -->
    <string name="email">Email</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="login_fragment_register_button">Don\'t have an account? Register</string>
    <string name="register_fragment_login_button">Already have an account? Login</string>



    <!-- Navigation -->
    <string name="home_fragment_title">HOME Fragment</string>
    <string name="pomodoro_fragment_title">POMODORO Fragment</string>
    <string name="activity_fragment_title">ACTIVITY Fragment</string>
    <string name="profile_fragment_title">PROFILE Fragment</string>
    <string name="calorie_tracker_fragment_title">Calorie Tracker</string>"
    <string name="calorie_tracker_search_fragment_title">Select foods</string>



    <!-- Calorie Counter -->
    <string name="calories_format">%1$d cal</string>
    <string name="protein_format">P: %1$d g</string>
    <string name="carbs_format">C: %1$d g</string>
    <string name="fats_format">F: %1$d g</string>

    <string name="total_calories_format">Calories: %1$d kcal / %2$d kcal</string>
    <string name="total_protein_format">Protein: %1$dg / %2$dg</string>
    <string name="total_carbs_format">Carbs: %1$dg / %2$dg</string>
    <string name="total_fats_format">Fats: %1$dg / %2$dg</string>
    <string name="macro_summary_format">%1$d kcal | P: %2$dg | C: %3$dg | F: %4$dg</string>

    <!-- Pomodoro -->
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="set_duration_title">Set Duration</string>
    <string name="minutes_hint">Minutes</string>
    <string name="seconds_hint">Seconds</string>
    <string name="time_separator">:</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="timer_content_description">Current timer duration</string>

</resources>