<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calorie_counter_fragment"
        android:icon="@drawable/ic_navigation_calories_counter"
        android:title="@string/bottom_navigation_menu_calories_counter" />
    <item
        android:id="@+id/nav_pomodoro_fragment"
        android:icon="@drawable/ic_navigation_pomodoro"
        android:title="@string/bottom_navigation_pomodoro" />
<!--    <item-->
<!--        android:id="@+id/activity_fragment"-->
<!--        android:icon="@drawable/ic_navigation_activity"-->
<!--        android:title="@string/bottom_navigation_menu_activity" />-->
    <item
        android:id="@+id/pomodoro_fragment"
        android:icon="@drawable/ic_navigation_profile"
        android:title="@string/bottom_navigation_menu_profile" />
</menu>
